--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 <title>Logesh</title>
-<link rel="stylesheet" href="css\styles.css">
+<link rel="stylesheet" href="styles.css">
 <link rel="icon" href="favicon.ico">
 <link href="https://fonts.googleapis.com/css2?family=Mansalva&family=Merriweather:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 </head>
